@@ -1,4 +1,8 @@
 
+2010-06-20 Take Vos <take.vos@vosgames.nl>
+
+* Changed to see the difference between GET, POST, PUT and delete.
+
 2010-06-19 Take Vos <take.vos@vosgames.nl>
 
 * Replaced postgresql with mod_dbd.
